--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ numpy==1.24.2
 zipp==3.4.1
 matplotlib==3.8.0
 plotly==5.17.0
+aiohttp==3.8.6
 coverage>=4.0
 cython>=0.29.8,<3.0.0rc1
 protobuf>=4.21.3,<5.0dev
